internal/xds/translator/testdata/out/xds-ir/http-route-weighted-backend-consistent-hash-single-cluster.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        hashPolicy:
        - header:
            headerName: x-user-id
        upgradeConfigs:
        - upgradeType: websocket
